# ScrapingStore

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  config.py  database.py  debug_run.txt  docker-compose.yml  logger.py  main.py  models.py  pyproject.toml  repomix-output.xml  requirements.txt
.github/workflows/: ci.yml
cleaning/: __init__.py  data_cleaner.py
data/: dashboard.html  products_cleaned.csv  products_powerbi.csv  products_raw.csv
docs/: dashboard_terminal.html
scraper/: __init__.py  base.py  product_scraper.py  product_scraper_browser.py
tests/: check_json.py  inspect_db.py  test_cleaner.py  test_database.py  test_scraper.py  verify_dashboard_fix.py  verify_pagination.py
visualization/: __init__.py  charts.py  dashboard_generator.py  terminal_dashboard_generator.py
visualization/templates/: dashboard_modern_template.html  dashboard_template.html  dashboard_terminal_template.html
